repair receive test